Java MQTT test programs